--- a/src/articles/intro.mdx
+++ b/src/articles/intro.mdx
@@ -7,6 +7,8 @@ This is my first blog post! Isn't it _great_?
 
 Some of my **favorite** things are:
 
-- Petting dogs
-- Singing
-- Eating potato-based foods
+```typescript
+const writingCode = true
+```
+
+![](../gatsby-astronaut.png)
