--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -1,6 +1,6 @@
 ---
 title: Personal tenets
-description: Active guidelines that help me be better.
+description: Active guidelines that help me improve.
 date: "2021-08-30"
 faIcon: "faMugHot"
 ---
