--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -5,43 +5,59 @@ date: "2021-08-30"
 faIcon: "faMugHot"
 ---
 
-The key concepts here are:
+import { Card } from "../components/card"
 
-1. You can improve yourself to lead a fuller, happier life.
-1. Self improvement requires
-   conscious, active effort.
+This entire section builds off of two concepts which are important to state explicitly: Firstly,
+you can improve yourself to lead a fuller, happier life. Self improvement requires
+conscious, active effort.
 
-Working to this, these tenets help me actively think through situations with the goal of maximizing genuinely empathy, productivity, and skill and knowledge.
-These are aimed at my personal strengths and weaknesses; I don't expect others to follow similar ones as they definitely won't work for everyone.
-Like any set of tenets, these will change and get updated as I grow.
+The way I try to consciously get better starts with writing down what I want to strive towards and what I strongly resonate with. I then turn those thoughts into a list of tenets which evolves as I grow.
 
-<h3>One | Don't be a dick</h3>
+<span className="text-sm quicksand">
+  This specific list is aimed at my personal strengths and weaknesses. I don't
+  expect others to follow the same principles, this is just what's worked the
+  best for me so far.
+</span>
 
-I resonate with Wheaton's Law. Start by assuming others
+<div className="mb-8"></div>
+
+<Card heading="People over _">
+
+**Life is richer alongside others.** Don't be a dick to them. Enjoy their company. Learn from them.
+
+**Most are striving for better.** Start by assuming others
 have good intentions even if their intentions are different from yours. Frame your
 perspective to work with, not against/through/around them.
 
-<h3>Two | You are ignorant</h3>
+<span className="text-sm">Most of my tenets feed to/from this one</span>
 
-We have incomplete information. Acknowledge this as a constant and actively look
-for and consider new information.
+</Card>
 
-<h3>Three | Team success is individual success</h3>
+<Card heading="Learning over correctness">
 
-We can't achieve our goals alone, so don't let others fail in their tasks. Be an
-owner of your team's goals not just your individual tasks.
+**We have incomplete information.** Acknowledge this as a constant and actively look
+for, and genuinely consider, new information.
 
-<h3>Four | Externalize</h3>
+**You only get better by being wrong.** Try to fail small and within a controlled environment, and try to fail frequently.
 
-Saying something is more valuable than keeping quiet. You may be the only one that
+</Card>
+
+<Card heading="Team progress over individual ambition">
+
+**Great things can't be achieved alone.** Primarily driving the collective goal is more valuable than focusing on individual achievements.
+
+**Teams are made of individuals.** Care about the individuals if you want the team to flourish.
+
+</Card>
+
+<Card heading="Authenticity over consensus">
+
+**Saying something is more valuable than keeping quiet.** You may be the only one that
 thought of it. Someone else may not raise the point you want to talk about. If you're
 uncomfortable with a decision / in a bad mood / disappointed, raise it.
 
-<h3>Five | Ask, don't tell</h3>
+**Your strengths are differences by definition.** Don't hide them, play to them.
 
-Telling people about the way things are/should be can end a conversation prematurely,
-especially if you have some convincing reasons for having that position. This can
-take agency away from others who may have stepped up. It also cuts off an opportunity
-for you to have heard other opinions, which may have influenced your position for
-the better. Asking questions can allow you to raise your thoughts without imposing
-them on others.
+**Strong feelings are legitimate.** Acknowledge them and make plans to accommodate them.
+
+</Card>
