--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Musical modes"
-description: A reference sheet for the 7 musical modes
+description: A reference sheet for the 7 musical modes.
 date: "2020-02-16"
 faIcon: faMusic
 ---
