--- a/src/articles/monoids.mdx
+++ b/src/articles/monoids.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Monoids"
-description: An intuitive look at a mathematical tool that guarantees composability.
-faIcon: "faCubes"
-date: "2021-08-30"
+title: Monoids
+description: An intuitive look at a mathematical tool to guarantee composability.
+faIcon: faCubes
+date: 2021-08-30
 ---
 
 In this document we'll briefly go through how we can use the mathematical concept of a monoid to help us design and build systems that enable composition.
 
-### Why should I care about composition?
+## Why should I care about composition?
 
 Composition is the idea that complex problems can be solved by combining the solutions of many simpler problems.
 This idea is a fundamental oen in programming, where complex software that would be impossible for any individual programmer to tackle can
@@ -17,7 +17,7 @@ Given the importance of composition in our field, having knowledge of techniques
 
 There are multiple ways to approach composition. One approach is to do it mathematically: by defining a system of rules that work together to _guarantee_ composability. While there are many mathematical systems that enable composability, we'll be taking a look at one in particular that's proven itself to be useful when programming: monoids.
 
-### Monoids
+## Monoids
 
 The "monoid" is the name of a concept in mathematics. That concept lays out a system which, when applied, will guarantee composability. The system is made up of the following:
 a grouping of items that can be composed; an operation that you can use to compose these items; and some rules that both the items and the operation need to follow so that the system has useful properties.
@@ -33,11 +33,11 @@ To build an intuitive understanding of how this system works, we'll look at each
 
 <div className="mb-8"></div>
 
-### The Monoidal Product
+## The Monoidal Product
 
 Lets start with a set of blocks that we want to compose together:
 
-![](./monoids-images/so-you-want-to-compose.png)
+![](./images/so-you-want-to-compose.png)
 
 First up, we need an operation that can compose just two elements.
 For this discussion, we'll say that our operation takes two blocks and
@@ -45,7 +45,7 @@ clips the first block on top of the second block.
 This operation that can compose two elements is called **the monoidal product**
 and we'll use the symbol **⊗** represent this composition e.g. using the monoidal product to compose A and B into C is written like this `A ⊗ B = C`
 
-![](./monoids-images/monoidal-product.png)
+![](./images/monoidal-product.png)
 
 For our product to work consistently, we also need to consider the blocks themselves. Notice how the LEGO blocks share attributes that allow them to be composed together: they have studs on the top and a structure on the bottom that can clip onto studs.
 In other words, these specific LEGO bricks are part of the larger
@@ -69,32 +69,32 @@ This conceptually allows us to keep composing items together infinitely.
   the output of an operation isn't always the same type as the inputs.
 </span>
 
-![](./monoids-images/further-composed.png)
+![](./images/further-composed.png)
 
 > <small>
 >   First condition for a monoid: we need a **monoidal product** that **takes
 >   two items in a set** and **returns an item in the same set**.
 > </small>
 
-### Associativity
+## Associativity
 
 We now have the core of a system that allows composability, but we need to define some more rules that help make this system easy to work with.
 
 The first of these is that we want to be able to perform compositions in any order. The picture below shows how two different composition orders for `A ⊗ B ⊗ C ⊗ D` result in the same end composition.
 
-![](./monoids-images/associativity.png)
+![](./images/associativity.png)
 
 Why is this a useful property to have in our system? It allows us to break up work. For example: if you have multiple people helping you build `(A ⊗ B) ⊗ (C ⊗ D)`, you can have person 1 do `(A ⊗ B)`, person 2 can do `(C ⊗ D)` and person 3 can take the results from person 1 and person 2 and compose them together into the final result. This is the key principle behind assembly lines in factories and parallel processing in software systems. This property of not caring for which operation is performed first is called **associativity**.
 
 An important note here that the "position" of the items still makes a difference: `A ⊗ B` is not the same as `B ⊗ A`. The above is about the order in which you perform the monoidal product.
 
-![](./monoids-images/ab-not-ba.png)
+![](./images/ab-not-ba.png)
 
 > <small>
 >   Second condition for a monoid: the monoidal product must be **associative**.
 > </small>
 
-### Identity
+## Identity
 
 The last thing we need to consider is that what we're building is a mathematical system. Mathematical systems, both in pure-maths and when part of software systems, don't know the exact data/information they will be working with ahead of time. In the case of composability, we won't know the number of items we'll need to compose together ahead of time. So our system needs to be able to handle any number of items. How do we handle the case where we're given _a single item_ given that we've built a system on top of the monoidal product, which composes _two_ items together?
 
@@ -121,7 +121,7 @@ And that's it. We have three conditions that give us a mathematical system that 
 
 So what do monoids look like in practice? Ironically, our LEGO blocks example is not a monoid: we saw that this system doesn't have an identity . There are several monoids in arithmetics: the set of real numbers, the monoidal product `+` and the identity `0` form a monoid; the set of real numbers, the monoidal product `*` and the identity `1` also form a monoid. We can also design them when writing software.
 
-### Example monoid in code
+## Example monoid in code
 
 Let's design a monoid that allows us to combine wishlists of stuff that our loved ones want.
 
@@ -323,7 +323,7 @@ console.log(wishlistFinal)
 // }
 ```
 
-### Recap/TLDR
+## Recap/TLDR
 
 A monoid is a mathematical system made up of:
 
