--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -1,8 +1,8 @@
 ---
 title: Personal tenets
 description: Active guidelines that help me improve.
-date: "2021-08-30"
-faIcon: "faMugHot"
+date: 2021-08-30
+faIcon: faMugHot
 ---
 
 import { Card } from "../components/card"
