--- a/src/articles/contextual-exchange-rate.mdx
+++ b/src/articles/contextual-exchange-rate.mdx
@@ -1,6 +1,6 @@
 ---
 title: Financial thoughts
-description: Quick notes and tools
+description: Quick notes and tools.
 faIcon: faEuroSign
 date: 2021-10-13
 ---
