--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -2,10 +2,10 @@
 title: Patterns
 description: My reference for patterns
 faIcon: faShapes
-date: 2021-12-23
+date: 2021-12-27
 ---
 
-import {Link} from "gatsby";
+import { Link } from "gatsby"
 
 This is my own reference-sheet for patterns. The aim is to make my own vocabulary explicit to align with others and to enhance my knowledge over-time.
 
@@ -21,3 +21,4 @@ Patterns are ways of organizing/architecting code or logical systems that have p
 # Patterns
 
 <Link to="/articles/pattern-factory">Factory</Link>
+<Link to="/articles/pattern-factory">Builder</Link>
