Add interceptor pattern

--- a/src/articles/pattern-builder.mdx
+++ b/src/articles/pattern-builder.mdx
@@ -33,6 +33,8 @@ When the user is ready, they can then ask this new class to create a new instanc
 A **builder class** that creates a new car object with custom configuration.
 
 ```typescript
+// Note: several class/enum definitions have been left out for brevity
+
 const snazzyCar = new CarBuilder()
   .withDriveType(new ManualDrive())
   .withSeatMaterial(Material.SUEDE)
