--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -22,3 +22,4 @@ Patterns are ways of organizing/architecting code or logical systems that have p
 
 <Link to="/articles/pattern-factory">Factory</Link>
 <Link to="/articles/pattern-builder">Builder</Link>
+<Link to="/articles/pattern-interceptor">Interceptor</Link>
