Fix patterns list

--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -20,6 +20,14 @@ Patterns are ways of organizing/architecting code or logical systems that have p
 
 # Patterns
 
-<Link to="/articles/pattern-factory">Factory</Link>
-<Link to="/articles/pattern-builder">Builder</Link>
-<Link to="/articles/pattern-interceptor">Interceptor</Link>
+<ul>
+  <li key="factory">
+    <Link to="/articles/pattern-factory">Factory</Link>
+  </li>
+  <li key="builder">
+    <Link to="/articles/pattern-builder">Builder</Link>
+  </li>
+  <li key="interceptor">
+    <Link to="/articles/pattern-interceptor">Interceptor</Link>
+  </li>
+</ul>
