Add the strategy pattern

--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -30,4 +30,7 @@ Patterns are ways of organizing/architecting code or logical systems that have p
   <li key="interceptor">
     <Link to="/articles/pattern-interceptor">Interceptor</Link>
   </li>
+  <li key="strategy">
+    <Link to="/articles/pattern-strategy">Strategy</Link>
+  </li>
 </ul>
