Add the pubsub pattern

--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -33,4 +33,7 @@ Patterns are ways of organizing/architecting code or logical systems that have p
   <li key="strategy">
     <Link to="/articles/pattern-strategy">Strategy</Link>
   </li>
+  <li key="pubsub">
+    <Link to="/articles/pattern-pubsub">Publisher-Subscriber</Link>
+  </li>
 </ul>
