--- a/src/articles/javascript-scope.mdx
+++ b/src/articles/javascript-scope.mdx
@@ -2,65 +2,77 @@
 title: Scope in JavaScript
 description: A brief overview of scope in javascript.
 faIcon: faWindowRestore
-date: 2019-09-08
+date: 2021-12-28
 ---
 
-Many bugs in programming arise from a misunderstanding of how scope is structured and how it can change. This page is a quick reference to help keep maintain a decent understanding of scope in JavaScript.
+Many bugs in programming arise from a misunderstanding of how scope is structured and how it can change. This page is a quick reference to help understand how scope behavies in JavaScript.
 
-**Scope** is the "stuff" that's available to a line of code at the time it gets executed. It encompasses what that it can access (available variables/references), and what it can do (the functions it can call and how it's allowed to call them). Another name for scope could be the "execution context" of a specific line of code.
+**Contents**
 
+- [General definition](#general-definition)
 - [References](#references)
 - [Types of scope in JavaScript](#types-of-scope-in-javascript)
-  - [Variable declaration with block scope](#variable-declaration-with-block-scope)
 - [Lexical scoping](#lexical-scoping)
 - [Closure](#closure)
 
+## General definition
+
+**Scope** is the "stuff" that's available to a line of code at the time it gets executed. Scope contains the variables/references/values and functions that the line of code can access. Another name for scope could be the "execution context" of a specific line of code.
+
 ## References
 
-JavaScript access values through **references** (a.k.a. pointers in other languages).
+JavaScript accesses values through **references**. The following steps through how references are used.
 
 ```javascript
-const person = { age: 20 } // create a reference to a person object
+/**
+ *  1. Create an empty object.
+ *  2. Create a numerical value of 20. Let's call this "OriginalValue."
+ *  3. Create a reference labeled "age" on the object, assign it "OriginalValue"
+ *  4. Assign the object to a new reference labeled "person"
+ */
+const person = { age: 20 }
 
+/**
+ * 1. Look up "person" reference, get the value it points to i.e. "resolve the reference".
+ * 2. On this value resolve the reference for "age".
+ * 3. Assign the resolved value to a new reference labelled "ageSnapshot".
+ */
 const ageSnapshot = person.age
-/**
- * Three main steps happen:
- *
- * 1. Look up "person" reference, get the value it points to (resolve the reference). Let's call that value "PersonValue".
- * 2. On the object "PersonValue", look up the reference for "age", resolve the reference to it's value. Let's call that value "AgeValue".
- * 3. Assign "AgeValue" to the "ageSnapshot" variable.
- */
 
+/**
+ * 1. Create a new value 21. Let's call this "NewValue".
+ * 2. Resolve the "person" reference
+ * 3. On the return value, resolve the reference for "age".
+ * 4. Assign "NewValue" to the "age" reference.
+ */
 person.age = 21
-/**
- * 4 main steps happen:
- *
- * 1. Create a new value 21, let's call it "NewAgeValue"
- * 2. Look up "person" reference, get the value it points to (resolve the reference). Let's call that value "PersonValue".
- * 3. On the object "PersonValue", look up the reference for "age". Let's call that reference "AgeReference".
- * 3. Assign "NewAgeValue" to the "AgeReference" reference.
- */
 
+/*
+ * 1. Resolve the references for person
+ * 2. On the resulting value, resolve the reference for "age".
+ *    This returns "NewValue", whose value is 21.
+ * 3. Log the value.
+ */
 console.log(person.age)
 // => 21
-/*
- * We resolve the references for person.age, which point to the "NewAgeValue" we set above, whose value is 21.
- */
 
+/*
+ * 1. Resolve the reveference for "ageSnapshot".
+ * 2. This returns "OriginalValue", whose value is 20.
+ * 3. Log the value.
+ */
 console.log(ageSnapshot)
 // => 20
-/*
- * We resolve the ageSnapshot reference, which points to the original value of age, which is 21.
- * The ageSnapshot reference is independent of the person.age reference. Changing one doesn't change the other.
- */
 ```
 
 ## Types of scope in JavaScript
 
-|global| Global scope is accessible from the entire execution environment (e.g. webpage or NodeJS instance). Objects have gobal scope when they are declared at the root level of a program i.e. outside of modules/classes/blocks/functions. |
-|module| Module scope is accessible anywhere in a [JavaScript module](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules). To access module-scoped objects outside of a module, they need to be exported from the module then imported into the consuming code. |
-|function| References with function scope are declared within functions. They are accessible anywhere within that function, irrespective of where that function is called from. |
-|block| Block scope is confined by a JavaScript block `{}`. |
+| type     | description                                                                                                                                                                                                                                                               |
+| -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| global   | Global scope is accessible from the entire execution environment (e.g. webpage or NodeJS instance). Objects have gobal scope when they are declared at the root level of a program i.e. outside of modules/classes/blocks/functions.                                      |
+| module   | Module scope is accessible anywhere in a [JavaScript module](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules). To access module-scoped objects outside of a module, they need to be exported from the module then imported into the consuming code. |
+| function | References with function scope are declared within functions. They are accessible anywhere within that function, irrespective of where that function is called from.                                                                                                      |
+| block    | Block scope is confined by a JavaScript block `{}`.                                                                                                                                                                                                                       |
 
 ```javascript
 /* main.js */
