Add periods to pattern descriptions
Not having these was annoying me on the home-page :)

--- a/src/articles/pattern-builder.mdx
+++ b/src/articles/pattern-builder.mdx
@@ -1,6 +1,6 @@
 ---
 title: Builder
-description: A reference for builder pattern
+description: A reference for builder pattern.
 faIcon: faShapes
 date: 2021-12-27
 ---
