--- a/src/articles/pattern-factory.mdx
+++ b/src/articles/pattern-factory.mdx
@@ -1,6 +1,6 @@
 ---
 title: Factory
-description: A reference for factory patterns
+description: A reference for factory patterns.
 faIcon: faShapes
 date: 2021-12-24
 ---
