--- a/src/articles/pattern-interceptor.mdx
+++ b/src/articles/pattern-interceptor.mdx
@@ -1,6 +1,6 @@
 ---
 title: Interceptor
-description: A reference for interceptor pattern
+description: A reference for interceptor pattern.
 faIcon: faShapes
 date: 2021-12-24
 ---
