--- a/src/articles/pattern-pubsub.mdx
+++ b/src/articles/pattern-pubsub.mdx
@@ -1,6 +1,6 @@
 ---
 title: Publisher-Subscriber
-description: A reference for the publisher-subscriber pattern
+description: A reference for the publisher-subscriber pattern.
 faIcon: faShapes
 date: 2021-12-28
 ---
