--- a/src/articles/pattern-strategy.mdx
+++ b/src/articles/pattern-strategy.mdx
@@ -1,6 +1,6 @@
 ---
 title: Strategy
-description: A reference for the strategy pattern
+description: A reference for the strategy pattern.
 faIcon: faShapes
 date: 2021-12-27
 ---
