--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -1,6 +1,6 @@
 ---
 title: Patterns
-description: My reference for patterns
+description: My reference index for patterns.
 faIcon: faShapes
 date: 2021-12-27
 ---
