--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -10,12 +10,15 @@ import { Disclaimer } from "../components/disclaimer"
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
 import { faExclamationTriangle } from "@fortawesome/free-solid-svg-icons"
 
-<Disclaimer heading="The author is not a financial advisor/consultant/professional">
+<Disclaimer heading="The author is not a financial advisor/consultant/professional.">
   <p>
-    These are the authors notes, kept for their own reference and use. They are
-    in no way to be considered advice, educational, or prescriptive.
+    These are my notes, kept for my reference and use. They are in no way to be
+    considered advice, educational, or prescriptive.
   </p>
-  <p>Consult a financial advisor if you require financial advice.</p>
+  <p>
+    Please do your own independent research and consult a financial advisor if
+    you require financial advice.
+  </p>
 </Disclaimer>
 
 <Card heading="Core principles">
@@ -35,6 +38,31 @@ import { faExclamationTriangle } from "@fortawesome/free-solid-svg-icons"
 - When changing jobs, your salary ratio between previous and new jobs shows your difference in buying-power.
 - Can be more useful than exchange rate when relocating to another country to get a sense for how expensive things are.
 - Use alongside exchange rate and cost-of-living to get a sense for how a job in a new country will affect your buying-power.
+
+**Restricted Stock Unit (RSU)**
+
+An RSU is a stock unit (e.g. one AMZN stock) that has been set aside for you, but which will only be given to you later, based
+on some conditions.
+
+- When a stock is given to you, we say that a stock "vests".
+- Often time and employment are the conditions for vesting e.g. your stock vests after 6 months if you still work for the company.
+- These are often used as a mechanism for retention. You get given new sets of RSUs in such a way that you always have some stocks that you need to wait for.
+  The fact that you will "lose" any RSUs that haven't yet vested at the time you leave.
+  This kind of scheme is sometimes called "golden handcuffs".
+
+Read on: https://www.investopedia.com/terms/r/restricted-stock-unit.asp
+
+**Stock options**
+
+An "option" is an opportunity to buy or sell one unit of stock at a specific price.
+
+- Options to buy company stock are sometimes given as employee remuneration instead of direct stock.
+- Options still require the person to actually buy the stock, but at a price that may have been locked in at a previous time.
+- The decision to buy the option is called "exercising" the option.
+- Recieving options can have very different tax implications to e.g. RSUs since the person doesn't actually own the stock yet.
+  In some cases it is possible to delay income taxes on options up until the moment where they are exercised.
+
+Read on: https://www.investopedia.com/terms/o/option.asp
 
 ## Thoughts
 
