Add notes on static images in Gatsby

--- a/src/articles/gatsby-notes.mdx
+++ b/src/articles/gatsby-notes.mdx
@@ -2,7 +2,7 @@
 title: Gatsby notes
 description: Notes from building this site on Gatsby.
 faIcon: faHammer
-date: 2021-09-01
+date: 2021-12-28
 ---
 
 ## "Everything is a"
@@ -68,6 +68,12 @@ Lorem ipsum.
 
 Lorem ipsum.
 ```
+
+## Images
+
+I ran into issues importing images directly into documents due to their size. See [this issue](https://github.com/gatsbyjs/gatsby/issues/11040) for more context.
+
+I found using [`<StaticImage />`](https://www.gatsbyjs.com/plugins/gatsby-plugin-image#static-images) to be a simple solution.
 
 ## Tailwind
 
