--- a/src/articles/unwronging.mdx
+++ b/src/articles/unwronging.mdx
@@ -1,22 +1,37 @@
 ---
 title: Unwronging
 description: A thought exercise on progress.
-date: 2021-08-31
+date: 2021-12-28
 faIcon: faDna
 ---
 
-You could think of "progress" as the process of becoming less and less wrong.
-The less wrong you are, the better you fare.
+import { Card } from "../components/card"
 
-Here's a thought exercise for levels at which progress can happen in our societies:
+<Card heading="Unwronging">
+  <p className="text-sm">
+    <i>verb</i>
+  </p>
+  <p>The conscious and systematic act of becoming less and less wrong.</p>
+  <p>
+    <b>Similar:</b>
+    <i> improve, progress, evolve, learn, adapt</i>
+  </p>
+</Card>
 
-<div style={{width: "1000px"}} className="my-8">
+<p>Yes, I made that word up. But it conveys what I need it to.</p>
+
+This is a thought exercise for how we _unwrong_ as a society. Starting with
+biology/natural-selection and working towards the individual.
 
 ![](./images/unwronging.png)
 
-</div>
+My takeaway from this exercise is that the individual ability to self-correct
+is the quickest way for us as a whole to get better.
 
-The most effective mechanism for progress is the ability of an individual to self-correct.
-For this to be effective, one needs to consciously acknowledge that you will often be wrong
-and that one needs to actively seek to constantly tweak their own behaviour to adapt to new
-information if they are to improve.
+This requires us to consciously and systematically:
+
+1. acknowledge that we will often be wrong
+1. look for feedback and new information to understand when we are likely to wrong
+1. tweak our behaviour according to new information
+
+In short: the way to make society better is, first-and-foremost, to make ourselves better.
