Consolidate components module

--- a/src/articles/inexpensive-mechanisms.mdx
+++ b/src/articles/inexpensive-mechanisms.mdx
@@ -5,7 +5,7 @@ faIcon: faPaperclip
 date: 2021-09-02
 ---
 
-import { ExpandableSection } from "../components/expandableSection"
+import { ExpandableSection } from "../components"
 
 This is a (hopefully) growing of mechanisms that are cheap to practically implement, but that empower processes
 that add value to the team and our customers.
