--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -5,8 +5,7 @@ faIcon: faEuroSign
 date: 2021-12-28
 ---
 
-import { Card } from "../components/card"
-import { Disclaimer } from "../components/disclaimer"
+import { Card, Disclaimer } from "../components"
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
 import { faExclamationTriangle } from "@fortawesome/free-solid-svg-icons"
 
