--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -5,7 +5,7 @@ date: 2021-08-30
 faIcon: faMugHot
 ---
 
-import { Card } from "../components/card"
+import { Card } from "../components"
 
 This entire section builds off of two concepts which are important to state explicitly: Firstly,
 you can improve yourself to lead a fuller, happier life. Self improvement requires
