--- a/src/articles/unwronging.mdx
+++ b/src/articles/unwronging.mdx
@@ -5,7 +5,7 @@ date: 2021-12-28
 faIcon: faDna
 ---
 
-import { Card } from "../components/card"
+import { Card } from "../components"
 
 **TLDR** The fastest way to correct issues/biases in society as a whole is to have individuals who actively seek to course-correct themselves.
 
