Add resources to operational observability article

--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -13,7 +13,7 @@ If you can think of corrections/additions to make to the page, please reach out 
 
 # Checklist
 
-Can you answer the following for your system at any time?
+Ideally you should be able to answer any of the following for your system within short notice.
 
 - [ ] [Is my system healthy?](#health-metrics)
 - [ ] [What is my system currently doing?](#diagnostic-metrics)
@@ -122,3 +122,11 @@ They help you build insight in how your product is being used and where customer
 
 These are analytical investigations or workflows which aggregate and process many customer traces to gain insight across multiple customers.
 They help identify groups of usecases and customer personas to which you can tailor your experiences.
+
+# Resources
+
+I found these personally very helpful:
+
+- [Amazon's approach to failing successfully](https://aws.amazon.com/builders-library/amazon-approach-to-failing-successfully/) - High-level overview for a strong operational posture .
+- [Instrumenting disributed systems for operational visibility](https://aws.amazon.com/builders-library/instrumenting-distributed-systems-for-operational-visibility/) - Low-level principles for implementing strong instrumentation in your systems.
+- [Building dashboards for operational visibility](https://aws.amazon.com/builders-library/building-dashboards-for-operational-visibility/) - A specific look at building dashboards across a system of microservices.
