Fix headers for most articles
To enable article navigation.

--- a/src/articles/machine-setup.mdx
+++ b/src/articles/machine-setup.mdx
@@ -7,7 +7,7 @@ faIcon: faDesktop
 
 I use this to get back to a semi-workable state on the sad (but frequent) occasions when I format my machine. I currently use [Ubuntu](https://ubuntu.com/).
 
-## Browser
+# Browser
 
 Install [Firefox developer edition](https://www.mozilla.org/en-US/firefox/developer/)
 
@@ -17,7 +17,7 @@ Install [Firefox developer edition](https://www.mozilla.org/en-US/firefox/develo
 - [Vimium](https://chrome.google.com/webstore/detail/vimium/dbepggeogbaibhgnhhndojpepiihcmeb?hl=en)
 - [uBlock Origin](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=en)
 
-## Work
+# Work
 
 Install [Guake](http://guake-project.org/)
 
@@ -128,7 +128,7 @@ Install [jq](https://stedolan.github.io/jq/)
 
 <span className="quicksand text-sm">Command line JSON manipulation tool</span>
 
-## Multimedia
+# Multimedia
 
 Install [Inkscape](https://snapcraft.io/inkscape)
 
