--- a/src/articles/load-shedding-throttling.mdx
+++ b/src/articles/load-shedding-throttling.mdx
@@ -11,7 +11,7 @@ faIcon: faTrafficLight
   * a.k.a rate limiting/API throttling/server-side throttling
 </span>
 
-## Service overload
+# Service overload
 
 There are 2 core ideas to consider when thinking about a service's ability to serve requests:
 
@@ -24,7 +24,7 @@ A spike in demand against the service will often cause a spike in the resource u
 
 ![without throttling](./images/without-throttling.png)
 
-## Selectively shedding load
+# Selectively shedding load
 
 In practice, events which cause load spikes often have a hot-spot e.g. a load spike event was caused when users were linked to a page from a popular Reddit post. Hotspots allow us to classify problematic load: we can distinguish traffic going to the hotspot from traffic going to other pages on the website. Once classified, we can limit the amount of requests we serve for a particular class, hopefully preventing the service from being overloaded.
 
@@ -41,11 +41,11 @@ So, what do we need to do to throttle? We need 4 things:
 
 ![throttling example](./images/throttling-example.png)
 
-## Limitations
+# Limitations
 
 Throttling looses some effectiveness when the axes are badly chosen or if demand hits every axis equally or at random. In these cases, the combination of requests being served across axes could still cause more load than the service can handle.
 
-## From the other perspective
+# From the other perspective
 
 We've looked at throttling from the service's side. Let's take a quick look at it from the user's side.
 
@@ -53,7 +53,7 @@ We've looked at throttling from the service's side. Let's take a quick look at i
 
 **What do I do with a throttled response?** When receiving a throttling exception, the best thing is to wait - to give the service some time to recover - then retry the same request. This is called `backoff and retry`. There are multiple ways to do this, but a good general-purpose algorithm is [exponential backoff and retry](https://cloud.google.com/storage/docs/exponential-backoff).
 
-## Read on
+# Read on
 
 - Article: [Go full throttle: The essentials of throttling in your application architecture](https://developer.ibm.com/articles/mw-1705-phillips/) - A more in-depth introduction to throttling.
 - Video: [Approaches for application request throttling](https://www.youtube.com/watch?v=Q53eR7mFsRo) - Conference talk iteratively implementing a throttling solution.
