--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -17,7 +17,7 @@ This is intended to be a reference sheet for the 7 musical modes.
 
 <div className="mb-8"></div>
 
-## Pattern of intervals between notes
+# Pattern of intervals between notes
 
 T - Tone
 : `s` - semitone
@@ -49,7 +49,7 @@ By "shifting" the order of the pattern, we end up with other scales. These scale
 
 <div className="mb-8"></div>
 
-## Intervals
+# Intervals
 
 Overview of what intervals are in scale.
 
@@ -65,7 +65,7 @@ Overview of what intervals are in scale.
 
 <div className="mb-8"></div>
 
-## Triad patterns
+# Triad patterns
 
 These are the chords you end up with when constructing triads that start at each scale degree and use only the notes from the scale.
 
